<?xml version="1.0" encoding="utf-8"?>
<!-- LinearLayout is used because the items are ordered simpy from top to bottom so there will be no nesting  -->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:foregroundGravity="top"
        android:gravity="top|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|top"
            android:paddingTop="16dp"
            android:text="@string/hello_string"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/welcome_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|top"
            android:paddingTop="16dp"
            android:text="@string/welcome_msg"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/instructions_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="20dp"
            android:text="@string/instruction_txt"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/instruction_txt" />
            <Button
                android:id="@+id/go_to_shoe_list_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#000000"
                android:text="@string/go_to_shoe_list_button_txt"
                />

    </LinearLayout>
</layout>