<?xml version="1.0" encoding="utf-8"?>

<!-- Used constraint layout to avoid nested layouts and use flat layout -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailField"
            style="@style/mail"
            android:layout_width="341dp"
            android:layout_height="50dp"
            android:layout_marginTop="164dp"
            android:drawableStart="@drawable/envelope_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#A1887F"
            app:circularflow_defaultAngle="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordField"
            style="@style/mail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/lock_solid"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#A1887F"
            app:layout_constraintEnd_toEndOf="@+id/emailField"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailField"
            app:layout_constraintTop_toBottomOf="@+id/emailField" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/log_in"
            app:layout_constraintBaseline_toBaselineOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="@+id/passwordField"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toEndOf="@+id/registerButton" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:backgroundTint="#2196F3"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/passwordField"
            app:layout_constraintTop_toBottomOf="@+id/passwordField"
            app:layout_constraintVertical_bias="0.118" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>