<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- LinearLayout is used because the items are ordered simply from top to bottom so there will be no nesting  -->
    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.ShoeListFragment">

        <!-- add a text view that says your shoe list -->
        <TextView
            android:id="@+id/shoe_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:foregroundGravity="top"
            android:gravity="top|center_vertical"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:text="@string/shoe_title_msg"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/add_new_shoe_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:foregroundGravity="top"
            android:gravity="top|center_vertical"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:text="@string/add_new_shoe_msg"
            android:textColor="#000000"
            android:textSize="16sp" />
        <!-- add a Button with add shoe text -->



        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/shoes_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_shoe_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="12dp"
            android:clickable="true"
            android:contentDescription="@string/any"
            android:src="@android:drawable/ic_input_add"
            android:focusable="true" />
    </LinearLayout>
</layout>